themes/bella/styles/section.rich-text.scss
@layer sections {
  [ui-section="rich-text"] {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: attr(data-top-spacing px) 8% attr(data-bottom-spacing px) !important;
    gap: var(--spacing-16);

    &[data-text-alignment="start"] {
      --text-heading-alignment-desktop: start;
    }

    &[data-text-alignment="center"] {
      --text-heading-alignment-desktop: center;
    }

    &[data-text-alignment="end"] {
      --text-heading-alignment-desktop: end;
    }

    .description {
      width: 50%;
    }

    .cta {
      width: fit-content;
      margin-block-start: var(--spacing-8);
    }

    @media (width <= 769px) {
      .description {
        width: 100%;
      }
    }
  }
}

